// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando GifExpertApp debe mostrar la interface 1`] = `
<Fragment>
  <h1>
    Gif Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;

exports[`Probando GifExpertApp debe mostrar una lista de categorias  1`] = `
<Fragment>
  <h1>
    Gif Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <ShowCategory
      category="Futbol"
      key="Futbol"
    />
    <ShowCategory
      category="Basket"
      key="Basket"
    />
    <ShowCategory
      category="Ciclismo"
      key="Ciclismo"
    />
  </ul>
</Fragment>
`;
